--- a/backend/public/POS.html
+++ b/backend/public/POS.html
@@ -14,7 +14,7 @@
       <img src="img/logo.png" alt="Logo" class="logo">
     </div>
     <div class="menu-links">
-      <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+      <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
       <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
       <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
       <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
