--- a/backend/public/dashboard.html
+++ b/backend/public/dashboard.html
@@ -6,6 +6,8 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
   <!-- Sidebar -->
@@ -32,17 +34,17 @@
 
       <!-- Dashboard Cards -->
       <div class="dashboard-cards">
-        <div class="card">
+        <div class="card" id="category-card">
           <div class="card-header"><i class="fas fa-th-large"></i> Category</div>
-          <div class="card-body">10</div>
-        </div>
+          <div class="card-body" id="category-count">Loading...</div>
+        </div>               
         <div class="card">
           <div class="card-header"><i class="fas fa-cogs"></i> Products</div>
-          <div class="card-body">150</div>
+          <div class="card-body" id="product-count">Loading...</div>
         </div>
         <div class="card">
           <div class="card-header"><i class="fas fa-calendar-alt"></i> Monthly Sales</div>
-          <div class="card-body">$20,000</div>
+          <div class="card-body" id="sales-count">Loading....</div>
         </div>
       </div>
 
@@ -52,12 +54,6 @@
         <div class="table-container">
           <div class="table-header">
             <h2>Top Selling Products</h2>
-            <select class="filter-category">
-              <option value="all">All Categories</option>
-              <option value="category1">Category 1</option>
-              <option value="category2">Category 2</option>
-              <option value="category3">Category 3</option>
-            </select>
           </div>
           <table class="table top-selling">
             <thead>
@@ -104,63 +100,29 @@
         </div>
 
         <!-- Low Stock Alert Table -->
-        <div class="table-container">
-          <div class="table-header">
-            <h2>Low Stock Alert</h2>
-            <select class="filter-category">
-              <option value="all">All Categories</option>
-              <option value="category1">Category 1</option>
-              <option value="category2">Category 2</option>
-              <option value="category3">Category 3</option>
-            </select>
-          </div>
-          <table class="table low-stock">
-            <thead>
-              <tr>
-                <th>Product</th>
-                <th>Category</th>
-                <th>Stock Remaining</th>
-                <th>Restock Needed</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Product 1</td>
-                <td>Category 1</td>
-                <td>10</td>
-                <td>Yes</td>
-              </tr>
-              <tr>
-                <td>Product 2</td>
-                <td>Category 2</td>
-                <td>5</td>
-                <td>Yes</td>
-              </tr>
-              <tr>
-                <td>Product 3</td>
-                <td>Category 1</td>
-                <td>3</td>
-                <td>Yes</td>
-              </tr>
-              <tr>
-                <td>Product 4</td>
-                <td>Category 3</td>
-                <td>8</td>
-                <td>No</td>
-              </tr>
-              <tr>
-                <td>Product 5</td>
-                <td>Category 2</td>
-                <td>4</td>
-                <td>Yes</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+<div class="table-container">
+  <div class="table-header">
+    <h2>Low Stock Alert</h2>
+  </div>
+  <table class="table low-stock">
+    <thead>
+      <tr>
+        <th>Product</th>
+        <th>Category</th>
+        <th>Stock Remaining</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody id="low-stock-body">
+      <!-- Dynamic rows will be inserted here -->
+    </tbody>
+  </table>
+</div>
+
       </div>
     </div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script src="dashboard.js"></script>
 </body>
 </html>
