--- a/backend/public/inventory.html
+++ b/backend/public/inventory.html
@@ -15,7 +15,7 @@
       <img src="img/logo.png" alt="Logo" class="logo">
     </div>
     <div class="menu-links">
-      <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+      <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
       <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
       <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
       <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
@@ -70,7 +70,7 @@
   </div>
 
   <!-- Modal for Add New Product Form -->
-  <div class="modal fade" id="addItemModal" tabindex="-1" aria-labelledby="addItemModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addItemModal" tabdashboard="-1" aria-labelledby="addItemModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
