--- a/backend/public/account.html
+++ b/backend/public/account.html
@@ -10,51 +10,84 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="logo-section">
-            <img src="img/logo.png" alt="Logo" class="logo">
-        </div>
-        <div class="menu-links">
-            <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-            <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
-            <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
-            <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
-            <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
-        </div>
-        <div class="bottom-links">
-            <a href="log.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
-        </div>
+      <div class="logo-section">
+        <img src="img/logo.png" alt="Logo" class="logo">
+      </div>
+      <div class="menu-links">
+        <a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+        <a href="inventory.html"><i class="fas fa-archive"></i> Inventory</a>
+        <a href="POS.html"><i class="fas fa-cash-register"></i> Point of Sales</a>
+        <a href="salesreport.html"><i class="fas fa-file-invoice"></i> Sales Report</a>
+        <a href="account.html"><i class="fas fa-user-cog"></i> Account</a>
+      </div>
+      <div class="bottom-links">
+        <a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+      </div>
     </div>
     <div class="wrapper">
         <div class="content">
             <div class="col-md-10">
                 <div class="content border border-3 border-light border rounded">
-                    <h3>Account Settings</h3>
-                    <p>Manage your account details and settings.</p>
-
+                    <h1>Account Settings</h1>
+                
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <label for="username" class="form-label">Username</label>
-                            <input type="text" id="username" class="form-control border border-1 border-dark border rounded" value="Elaine">
+                            <input type="text" id="username" class="form-control border border-1 border-dark border rounded" value="Baba" readonly>
                         </div>
                         <div class="col-md-6">
                             <label for="email" class="form-label">Email Address</label>
-                            <input type="email" id="email" class="form-control border border-1 border-dark border rounded" value="elaine@gmail.com">
+                            <input type="email" id="email" class="form-control border border-1 border-dark border rounded" value="Baba@gmail.com" readonly>
                         </div>
                     </div>
-
+                    
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <label for="password" class="form-label">Password</label>
                             <input type="password" id="password" class="form-control border border-1 border-dark border rounded" value="******" readonly>
-                            <button id="changePasswordBtn" class="btn btn-outline-secondary mt-2">Change Password</button>
+                            <button class="btn btn-outline-secondary mt-2" data-bs-toggle="modal" data-bs-target="#changePasswordModal">Change Password</button>
                         </div>
                     </div>
-                    <button id="update-btn" class="btn btn-primary">Save Changes</button>
+                    <button class="btn btn-primary">Save Changes</button>
                 </div>
             </div>
         </div>
     </div>
-    <script src="account.js"></script>
+
+    <!-- Change Password Modal -->
+    <div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="changePasswordModalLabel">Change Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="changePasswordForm">
+                        <div class="mb-3">
+                            <label for="currentPassword" class="form-label">Current Password</label>
+                            <input type="password" class="form-control" id="currentPassword" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="newPassword" class="form-label">New Password</label>
+                            <input type="password" class="form-control" id="newPassword" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirmPassword" class="form-label">Confirm New Password</label>
+                            <input type="password" class="form-control" id="confirmPassword" required>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="savePasswordButton">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="sales.js"></script>
+    <script src="change-password.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
